# VerImgCmp

./: DCTmat.txt  Qmat.txt  README.md  create_input.py
SNARKPEG_Commit/: .gitignore  CMakeLists.txt  README.md  encoding.go  go.mod  kzh4.go  kzh4_test.go  qD.txt  qR.txt
SNARKPEG_Commit/3rd/bits/: stdc++.h
SNARKPEG_Commit/3rd/hyrax-bls12-381/3rd/mcl/: CMakeLists.txt
SNARKPEG_Commit/3rd/hyrax-bls12-381/src/: polyVerifier.cpp  polyVerifier.hpp
SNARKPEG_Commit/VICsrc/: CMakeLists.txt  circuit.cpp  circuit.h  dctq.cpp  dctq.hpp  global_var.hpp  kzh_wrapper.cpp  kzh_wrapper.hpp  main_demo_dctq.cpp  polynomial.h  prover.cpp  prover.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp  verifier.cpp  verifier.hpp
SNARKPEG_Commit/kzh_gnark/: encoding.go  go.mod  go.sum  kzh4_test.go  main.go
SNARKPEG_Commit/script/: build.sh  run_snarkpeg_commit.sh
SNARKPEG_Commit/third_party_go/bitset/: bitset.go  go.mod
SNARKPEG_Commit/third_party_go/xsys/: go.mod
SNARKPEG_Commit/third_party_go/xsys/cpu/: cpu.go
SNARKPEG_Poseidon/: Cargo.toml
SNARKPEG_Poseidon/matrices/: Qmat.txt
SNARKPEG_Poseidon/src/: circuit.rs  dctq.rs  hash.rs  input.rs  main.rs  prover.rs
callnova_lh_90/: Cargo.toml
callnova_lh_90/src/: circuit.rs  dctq.rs  hash.rs  input.rs  main.rs  poseidon.rs  poseidon2.rs  prover.rs
callnova_pack_90/: Cargo.toml
callnova_pack_90/src/: circuit.rs  dctq.rs  hash.rs  (+4 more)
callnova_v4/: Cargo.toml
callnova_v5/: Cargo.toml
callnova_v5/src/: artifact.rs  circuit.rs  dctq.rs  hash.rs  input.rs  main.rs  poseidon.rs  prover.rs
script/: run_snarkpeg_poseidon.sh
(+18 files in other folders)
