[package]
name = "vimz_v5"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.13"
generic-array = "1.3.5"
nova-snark = { version = "=0.60.0", features = ["experimental"] }
num-bigint = "0.4"
serde = "1.0"
serde_json = "1.0.85"
clap = "2.33"
libc = "0.2"
rayon = "1.10"
thiserror = "2.0"
typenum = "1.19.0"

[[bin]]
name = "vimz_v5"
path = "src/main.rs"

[patch.crates-io]
nova-snark = { path = "../nova60/Nova" }
